<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_gradient"
        android:paddingTop="35dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_interno">

            <ImageView
                android:id="@+id/ivRoad"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="32dp"
                android:scaleType="fitStart"
                android:src="@drawable/ic_check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSucesso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tv_sucesso"
                android:textAllCaps="true"
                android:textColor="@color/verde_contraste"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivRoad" />

            <ImageView
                android:id="@+id/ivRetangulo"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/shape_retangulo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSucesso" />

            <TextView
                android:id="@+id/tvNumeroReserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tv_numeroReserva"
                android:textColor="@color/cinza_escuro"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/ivRetangulo"
                app:layout_constraintStart_toStartOf="@+id/ivRetangulo"
                app:layout_constraintTop_toTopOf="@+id/ivRetangulo" />

            <TextView
                android:id="@+id/tvNumeroReservaEx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/cinza_escuro"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tvNumeroReserva"
                app:layout_constraintStart_toStartOf="@+id/tvNumeroReserva"
                app:layout_constraintTop_toBottomOf="@+id/tvNumeroReserva"
                tools:text="@string/tv_numeroReservaEx" />

            <TextView
                android:id="@+id/tvTextomotivacional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/tv_msgmMotivacional"
                android:textColor="@color/cinza_escuro"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivRetangulo" />

            <TextView
                android:id="@+id/tvTextomotivacional2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_msgmMotivacionalcontinuacao"
                android:textColor="@color/cinza_escuro"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTextomotivacional" />

            <Button
                android:id="@+id/btOk"
                style="@style/ButtonPrimary.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:width="350dp"
                android:height="70dp"
                android:backgroundTint="@color/verde_contraste"
                android:text="@string/btn_ok"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTextomotivacional2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>